attempt to fix font on iOS

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 h1, h2 {
 	font-family: 'Dancing Script', cursive;
 	letter-spacing: 0px;
+	font-weight: 600;
 }
 
 h3 {
